Fix code block overflow

--- a/src/components/UserContent/UserContent.scss
+++ b/src/components/UserContent/UserContent.scss
@@ -99,6 +99,7 @@
 
   pre {
     padding: 0.6em;
+    overflow: auto;
   }
 
   pre > code {
